--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/suggestion": "^2.11.2",
     "@tiptap/vue-3": "^2.11.2",
     "@vee-validate/nuxt": "^4.15.0",
+    "@vee-validate/yup": "^4.15.0",
     "@vueuse/nuxt": "12.4.0",
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.15.1",
